test/syntax/fail/attrs/test/only_on_nodes.sync
[@test]
let f (x : int) = x
