test/syntax/fail/attrs/test/only_on_nodes.expected
File "dummy.sync", line 1, characters 3-7:
 1 | [@test]
       ^^^^

Error: The 'test' attribute can only be applied to nodes.
